--- a/jpg-to-pdf.html
+++ b/jpg-to-pdf.html
@@ -379,7 +379,7 @@ convertBtn.addEventListener("click", async () => {
   formData.append("rotations", JSON.stringify(rotations));
 
   try {
-    const response = await fetch("http://localhost:4000/api/create-pdf", {
+    const response = await fetch("https://fdf-maker.onrender.com/api/create-pdf", {
       method: "POST",
       body: formData,
     });
